Comprehensive code cleanup and refactoring (#12)
* refactor: fix Kotlin compilation warnings in Logger classes

- Replace deprecated fromOrdinal() calls with LogLevel.entries.getOrNull()
- Add safe bounds checking with fallback to LogLevel.NORMAL
- Fix parameter name mismatch in LoggerHookChain.log() to match superclass
- Use consistent parameter names 'source' and 'message' as defined in LoggerHook

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* Remove deprecated method internExtra

* fix: remove deprecated ThreadDeath catch block

- Remove ThreadDeath catch in PluginTalker.sendSyncInternalOnly()
- ThreadDeath has been deprecated and marked for removal in modern Java
- Maintain proper exception handling for VirtualMachineError and general Throwable
- Follows modern Java best practices avoiding deprecated Thread.stop() patterns

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* fix: resolve Gradle Task.project deprecation warning

- Capture project.version during configuration time to avoid execution-time access
- Fixes deprecation warning about Task.project usage incompatible with configuration cache
- Prepares build script for Gradle 10 compatibility where configuration cache becomes mandatory

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* refactor: modernize NativeThread priority constants usage

Replace deprecated NativeThread priority constants (MIN_PRIORITY, LOW_PRIORITY,
NORM_PRIORITY, HIGH_PRIORITY, MAX_PRIORITY) with modern PriorityLevel enum values
across the entire codebase. This eliminates 82 deprecation warnings while
maintaining backward compatibility.

Changes:
- Updated 56 files across core, client, node, and support modules
- All code now uses NativeThread.PriorityLevel.ENUM_VALUE.value syntax
- Fixed internal NativeThread usage to use modern enum approach
- Deprecated constant